--- a/src/zabbix_frontend_php/run/modules/run/templates/zabbix.erb
+++ b/src/zabbix_frontend_php/run/modules/run/templates/zabbix.erb
@@ -1,6 +1,6 @@
 # Define /zabbix alias, this is the default
 <IfModule mod_alias.c>
-    Alias /zabbix /usr/share/zabbix
+    Alias / /usr/share/zabbix
 </IfModule>
 
 <Directory "/usr/share/zabbix">
